routes/api-example-com-httproute-with-routeoption.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: api-example-com-route
  namespace: default
  labels:
    app: apis
spec:
  parentRefs:
    - name: gw
      namespace: ingress-gw
  hostnames:
    - "api.example.com"
  rules:
    - matches:  
      - path:
          type: PathPrefix
          value: /httpbin/
        # headers:
        # - name: version
        #   value: v2
        #   type: Exact
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
      backendRefs:
      # Referencing a service in another namespace than the Route, so need to add ReferenceGrant to allow this.
      - name: httpbin
        namespace: httpbin
        port: 8000
    - matches:  
      - path:
          type: PathPrefix
          value: /httpbin2/
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
      # ExtensionRef to RouteOption
      - type: ExtensionRef
        extensionRef:
          group: gateway.solo.io
          kind: RouteOption
          name: policy-filter
      backendRefs:
      - name: httpbin
        namespace: httpbin
        port: 8000
