routes/api-example-com-root-httproute-2.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: api-example-com
  namespace: default
  labels:
    app: apis
spec:
  parentRefs:
    - name: gw
      namespace: ingress-gw
  hostnames:
    - "api.example.com"
  rules:
    - matches:  
      - path:
          type: PathPrefix
          value: /httpbin/
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
      backendRefs:
      # Delegate to routes with the label delegation.gateway.solo.io/label:httpbin
      # in the foo namespace
      - group: delegation.gateway.solo.io
        kind: label # no other value is allowed
        name: httpbin # label value
        namespace: default # defaults to parent's namespace if unset
