routes/httpbin-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: httpbin
  namespace: default
  labels:
    app: apis
    delegation.gateway.solo.io/label: httpbin # label key is fixed
  annotations:
    delegation.gateway.solo.io/inherit-parent-matcher: "true"
spec:
  rules:
    - matches:  
      - path:
          type: PathPrefix
          value: /
      backendRefs:  
      - name: httpbin
        namespace: httpbin
        port: 8000
