routes/portal-server-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: portal-webserver-api
  namespace: default
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gw
      namespace: ingress-gw
  hostnames:
    - developer.example.com
  rules:
    - backendRefs:
        - name: gateway-portal-web-server
          namespace: gloo-system
          port: 8080
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.solo.io
            kind: RouteOption
            name: portal-auth
    - matches:
      # Unsecured paths
      - path:
          value: /v1/api-products
        method: GET
      - path:
          value: /v1/openapi
        method: GET
      - path:
          value: /v1/api-products
        method: OPTIONS
      - path:
          value: /v1/openapi
        method: OPTIONS
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.solo.io
            kind: RouteOption
            name: portal
      backendRefs:
        - name: gateway-portal-web-server
          namespace: gloo-system
          port: 8080
    - matches:
      # Secured paths
      - path:
          value: /v1/me
        method: OPTIONS
      - path:
          value: /v1/me
        method: GET
        headers:
        - type: RegularExpression
          name: Authorization
          value: "Bearer.*"
      - path:
          value: /v1/api-products
        method: GET
        headers:
        - type: RegularExpression
          name: Authorization
          value: "Bearer.*"
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.solo.io
            kind: RouteOption
            name: portal
      backendRefs:
        - name: gateway-portal-web-server
          namespace: gloo-system
          port: 8080
